fix(remote): keep guide notification compatible with Android 11